<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity"
    android:orientation="vertical"
    android:background="#ffffff">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/regUserPhoto"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/todo"
                android:src="@mipmap/userphoto"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/regName"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:background="@drawable/reg_edittext_style"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:layout_gravity="center"
                />

            <EditText
                android:background="@drawable/reg_edittext_style"
                android:hint="@string/mail"
                android:id="@+id/regMail"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:inputType="textPersonName" />

            <EditText
                android:background="@drawable/reg_edittext_style"
                android:hint="@string/password"
                android:id="@+id/regPassword"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:inputType="textPassword" />

            <EditText
                android:background="@drawable/reg_edittext_style"
                android:hint="@string/confirm_password"
                android:id="@+id/regPassword2"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/UserNumber"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:hint="@string/your_number"
                android:inputType="phone"
                />
            <EditText
                android:id="@+id/familymember1"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:hint="@string/familymember1"
                android:inputType="phone"
                />

            <EditText
                android:id="@+id/familymember2"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:hint="@string/familymember2"
                android:inputType="phone"
                />

            <EditText
                android:id="@+id/familymember3"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:hint="@string/familymember3"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regPassword" />

            <Button
                android:id="@+id/regBtn"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/reg_btn_style"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:layout_marginTop="5dp"
                />
            <ProgressBar
                android:id="@+id/regProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>