<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity"
    android:background="#ffffff"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/profilephoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@mipmap/userphoto"
        android:layout_marginTop="5dp"

       />
    <TextView
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="Your Special Number"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edit_yournumber"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="Your Number"
        android:inputType="phone"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="Family Members Numbers"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edit_familymember1"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/familymember1"
        android:inputType="phone"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_familymember2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/familymember2"
        android:inputType="phone"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_familymember3"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/familymember3"
        android:inputType="phone"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/save_changes"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_btn_style"
        android:text="@string/Update"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:id="@+id/upProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
</LinearLayout>